--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			<h1>J. Chad Howell</h1>			
 		</div>	
 		<div class="tagline">
-			<h2>"Chad combines graduate degrees in <strong>computer and information science</strong> and <strong>business administration</strong> to bring a strong bottom-line focus to software development.  For over ten years he has worked as a <strong>programmer</strong>, <strong>project manager</strong>, and <strong>consultant</strong> completing projects in fields including <strong>e-commerce</strong>, <strong>fintech</strong> and <strong>banking services</strong>.  Interests include <strong>behavioral and organizational psychology</strong> giving him an insightful perspective on the cognitive and social challenges of software development." [ClearMeasure bio]
+			<h2>"Chad combines graduate degrees in <strong>computer and information science</strong> and <strong>business administration</strong> to bring a strong bottom-line focus to software development.  For over ten years he has worked as a <strong>developer</strong>, <strong>project manager</strong>, and <strong>consultant</strong> completing projects in fields including <strong>e-commerce</strong>, <strong>fintech</strong> and <strong>banking services</strong>.  Interests include <strong>behavioral and organizational psychology</strong> giving him an insightful perspective on the cognitive and social challenges of software development." [ClearMeasure bio]
 			</h2>		
 		</div>	
 		<div class="projects">	
